# ELDER

./: .env  .gitignore  README.md  benchmark.yaml  config.yaml  elder_config.yaml  notes.txt  pyproject.toml
analysis_elder_paper/: README.md
analysis_elder_paper/notebooks/: figure_4_performance_as_func_of_nr_of_pheno_p_case.ipynb  figure_5_performance_as_func_of_nr_of_pheno_p_disease.ipynb
analysis_elder_paper/results/: README.md
analysis_elder_paper/scripts/: create_normalized_datasets.py  figure_5_performance_as_func_of_nr_of_pheno_p_disease.py  run_figure_4_performance_as_func_of_nr_of_pheno_p_case.py  run_figure_5_performance_as_func_of_nr_of_pheno_p_disease.py
config/: config_loader.py
core/: base_service.py  chromadb_manager.py  data_analyzer.py  data_processor.py  disease_avg_embedding_service.py  disease_clustered_embedding_service.py  hp_embedding_service.py  hpo_clustering.py  query_service.py  runner.py  umap_plotter.py
docs/: configuration.md  curate_index.md
elder_core/: base_service.py  chromadb_manager.py  data_analyzer.py  data_processor.py  disease_avg_embedding_service.py  disease_clustered_embedding_service.py  hp_embedding_service.py  query_service.py  runner.py  umap_plotter.py
emb_data/models/: check_collection_data.py  list_collections.py  possible_emb_models.py
examples/: README.md  run_with_config.py
examples/configs/: average_config.yaml  bestmatch_config.yaml  weighted_config.yaml
figure_4_analysis/: README.md  requirements.txt
figure_4_analysis/notebooks/: phenotype_complexity_analysis.ipynb
figure_4_analysis/scripts/: create_normalized_datasets.py  phenotype_complexity_analysis.py
main/: constants.py  main.py
notebooks/: disease_results.ipynb  how_to.ipynb  np_array.ipynb  np_array_for_hp.ipynb
output/: embeddings_dict  first_embedding_dict  omim_dict_default_extract_test.json  omim_dict_test.json  omim_dump.txt  readme_output.md  results.txt
src/pheval_elder/: __init__.py  base_runner.py  check_obsolete_hpos.py  cli.py  cosim_bma_runner.py  curate_index_cli.py  dis_avg_emb_runner.py  dis_wgt_avg_emb_runner.py  elder_cli.py  hf_download_cli.py  jax_ontology_client.py  runner.py  tcp_standalone.py
src/pheval_elder/huggingface/: huggingface_agent.py
src/pheval_elder/main/: __init__.py  constants.py  get_organ_main.py  main.py  main_avg.py  main_clustered.py  main_weighted.py
src/pheval_elder/post_process/: data_analytics.ipynb  disease_average_embeddings_workflow.py  disease_data_analyzer.py  embeddings_aggregator.py  plotter.py  umap_reducer.py  umap_visualization_will.ipynb
src/pheval_elder/prepare/: notebooks.ipynb  simple_service.py
src/pheval_elder/prepare/config/: config_loader.py  config_validator.py  unified_config.py
src/pheval_elder/prepare/core/: OMIMHPOExtractor.py  base_service.py  chromadb_manager.py  custom_elder.py  data_processor.py  disease_avg_embedding_service.py  disease_clustered_emb_service.py  disease_weighted_avg_embedding_service.py  elder.py  extract_graph_embeddings.ipynb  graph_data_processor.py  graph_deepwalk_avg_service.py  graph_deepwalk_weighted_service.py  graph_embedding_extractor.py  graph_line_avg_service.py  graph_line_weighted_service.py  hp_embedding_service.py  hpo_clustering.py  organ_systems.py  query_service.py  similarity_service.py
src/pheval_elder/prepare/notebooks/: enhanced_all_outliers.csv  enhanced_high_resnik_low_cosine.csv  enhanced_high_resnik_low_cosine_term+label.csv  enhanced_low_resnik_high_cosine.csv  enhanced_low_resnik_high_cosine_term+label.csv  notebooks.ipynb  original_all_outliers.csv  original_high_resnik_low_cosine.csv  original_high_resnik_low_cosine_term+label.csv  original_low_resnik_high_cosine.csv  original_low_resnik_high_cosine_term+label.csv  prompt_for_enhanced_def.txt  similarity_comparison_analysis.py  similarity_comparison_summary.md
src/pheval_elder/prepare/utils/: similarity_measures.py
src/pheval_elder/tests/: test_chroma_upsert.py  test_chromadbmanager.py  test_dataprocessor.py  test_dataprocessorintegration.py  test_graph_embedding_extractor.py  test_omimhpoexrractor.py  test_weighted_avg_service.py
templates/: elder_config_template.yaml
tests/: __init__.py  benchmark_chromadb_vs_duckdb.py  poc_duckdb_vss.py  test_chroma_upsert.py  test_dataprocessor.py  test_dataprocessorintegration.py  test_graph_embedding_extractor.py  test_omimhpoexrractor.py  test_weighted_avg_service.py
(+27 files in other folders)
