[tool.poetry]
name = "pheval_elder"
version = "0.1.0"
description = ""
authors = ["iQuxLE <ckroll95@gmail.com>"]
readme = "README.md"
packages = [{ include = "pheval_elder", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "0.5.16"
jupyter = "^1.0.0"
np = "^1.0.2"
pandas = "^2.1.4"
pheval = "^0.3.2"
wget = "^3.2"
numpy = "<2.0.0"
api = "^0.0.7"
click-default-group = "^1.2.4"
venomx = "^0.1.1"

[tool.poetry.plugins."pheval.plugins"]
customrunner = "pheval_elder.runner:ElderPhEvalRunner"

[tool.poetry.scripts]
elder = "pheval_elder.elder_cli:elder"
embeddings = "pheval_elder.hf_download_cli:embeddings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
