[tool.poetry]
name = "pheval_elder"
version = "0.1.0"
description = ""
authors = ["iQuxLE <ckroll95@gmail.com>"]
readme = "README.md"
packages = [{ include = "pheval_elder", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "0.5.16"
jupyter = "^1.0.0"
np = "^1.0.2"
pandas = "^2.1.4"
pheval = "^0.3.2"
wget = "^3.2"
numpy = "<2.0.0"
api = "^0.0.7"
click-default-group = "^1.2.4"
venomx = "^0.1.1"
langchain = "^0.3.11"
notebook = "^7.3.2"
jaxlib = "^0.5.0"
jax = "^0.5.0"
nvidia-ml-py3 = "^7.352.0"
torch = "^2.6.0"
duckdb = "^1.0.0"
semsimian = "^0.2.19"
statsmodels = "^0.14.4"
dash = "^2.18.2"
datasets = "^3.3.2"
huggingface-hub = "^0.24.0"
tqdm = "^4.66.0"
curategpt = { git = "https://github.com/iQuxLE/curate-gpt.git", branch = "enhanced_hp_definitions" }
httpx = ">=0.27.0"


[tool.poetry.plugins."pheval.plugins"]
customrunner = "pheval_elder.runner:ElderPhEvalRunner"

[tool.poetry.scripts]
elder = "pheval_elder.elder_cli:elder"
embeddings = "pheval_elder.hf_download_cli:embeddings"
curate-index = "pheval_elder.curate_index_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
