[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheval-elder"
version = "0.1.0"
description = "Embeddings-based Large-scale Differential Diagnostic Engine with Retrieval"
authors = [
    {name = "iQuxLE", email = "ckroll95@gmail.com"},
    {name = "Justin Reese", email = "justinreese@lbl.gov"},
    {name = "Harry Caufield", email = "jhc@lbl.gov"},
    {name = "Peter Robinson", email = "peter.robinson@bih-charite.de"},
    {name = "Chris Mungall", email = "cjmungall@lbl.gov"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.16",
    "jupyter>=1.0.0,<2.0",
    "pandas>=2.1.4,<3.0",
    "pheval>=0.3.2,<1.0",
    "wget>=3.2,<4.0",
    "numpy>=1.0,<2.0.0",
    "click-default-group>=1.2.4,<2.0",
    "venomx>=0.1.1,<1.0",
    "langchain>=0.3.11,<1.0",
    "notebook>=7.3.2,<8.0",
    # jaxlib/jax: constrained for macOS 12 and earlier (Darwin kernel < 22)
    "jaxlib>=0.5.0,<0.6.0; platform_system == 'Darwin' and platform_release < '22'",
    "jaxlib>=0.5.0,<1.0; platform_system != 'Darwin' or platform_release >= '22'",
    "jax>=0.5.0,<0.6.0; platform_system == 'Darwin' and platform_release < '22'",
    "jax>=0.5.0,<1.0; platform_system != 'Darwin' or platform_release >= '22'",
    "nvidia-ml-py3>=7.352.0,<8.0",
    "torch>=2.6.0,<3.0",
    "duckdb>=1.0.0,<2.0",
    "semsimian>=0.2.19,<1.0",
    "statsmodels>=0.14.4,<1.0",
    "dash>=2.18.2,<3.0",
    "datasets>=3.3.2,<4.0",
    "huggingface-hub>=0.24.0,<1.0",
    "tqdm>=4.66.0,<5.0",
    # "curategpt @ git+https://github.com/iQuxLE/curate-gpt.git@enhanced_hp_definitions",  # Temporarily disabled - requires onnxruntime which is incompatible with macOS 12
    "httpx>=0.27.0",
]

[project.scripts]
elder = "pheval_elder.elder_cli:elder"
embeddings = "pheval_elder.hf_download_cli:embeddings"
curate-index = "pheval_elder.curate_index_cli:cli"

[project.entry-points."pheval.plugins"]
customrunner = "pheval_elder.runner:ElderPhEvalRunner"

[tool.hatch.build.targets.wheel]
packages = ["src/pheval_elder"]

[tool.uv]
# NOTE: Planning to remove curategpt dependency and move db functionality into ELDER
# See notes/future-refactor-curategpt.md
# Constrain onnxruntime for macOS 12 and earlier (Darwin kernel < 22)
# Newer versions require macOS 13+
constraint-dependencies = [
    "onnxruntime<1.19.0; platform_system == 'Darwin' and platform_release < '22'",
]
